osha.theme Changelog
====================

1.2.44 (unreleased)
-------------------

- Nothing changed yet.


1.2.43 (2009-10-27)
-------------------

- Added new napo film  rels to #364 (pilz)
- vastly extended the help text on how to search for collections by "path:", plus added a hard link to
  http://osha.europa.eu/directory; ticket 396 (thomasw) 

1.2.42 (2009-10-25)
-------------------

- updated addthis code (pilz)
- added rss icon to blog view (pilz)


1.2.41 (2009-10-25)
-------------------

- Nothing changed yet.


1.2.40 (2009-10-25)
-------------------

- oshaview: fixed a bug introduced in revision 1835 that prevented any keyword from being 
  displayed in the HTML header;  Also, keywords from the Subject list are now properly translated (thomasw)
- fixed accessibility problem where p must not appear within a span. This is due to the fact that the agency requires html rendering for descriptions. (pilz)
- fixed additional CSS Bugs based on the Carsa report (pilz)
- added flashobject.js (pilz)
- converted flash portlet to use flashobject.js to load the film (pilz)


1.2.39 (2009-10-21)
-------------------

- Various tweaks to the Cleaning Workers / Topics SEP, Practical Solutions
  Advanced search field #375 #376 #409 (deroiste)
- i18n for "questions in parliament / BeSWIC" (thomasw)

1.2.38 (2009-10-20)
-------------------

- Fixed dependencies, minor code style improvements and handling of edge cases
  in the Topics view (deroiste)

1.2.37 (2009-10-18)
-------------------

- Added the blog RSS feed to rss-feeds browser view according to request in #239 (pilz)
- Added a locales-directory for OSHA specific translation customisations (thomasw)
- Topics views changed to use a rich document and related images or video for
  content. (deroiste)
- Finalised i18n for Practical Solutions (deroiste)
- Add the necessary meta and link tags for sharing with facebook (jcbrand)